# src/dtos/admin-login.dto.ts
@@ -1,0 +1,6 @@
+import { IsString } from 'class-validator';
+
+export class AdminLoginDto {
+  @IsString()
+  public password: string;
+}
